Add hashing module to create/verify password hashes

--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Compile Include="Models.fs" />
+    <Compile Include="Hashes.fs" />
     <Compile Include="RouteUtils.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
