--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -11,13 +11,13 @@
 
   <ItemGroup>
     <Compile Include="Models.fs" />
+    <Compile Include="Views\ViewUtils.fs" />
+    <Compile Include="Views\Users.fs" />
     <Compile Include="Hashes.fs" />
     <Compile Include="RouteUtils.fs" />
-    <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="web.config" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="WebRoot\**\*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -25,6 +25,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FoxyBalance.Database\FoxyBalance.Database.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Routes\Users.fs" />
+    <Compile Include="Program.fs" />
+    <None Include="web.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <Import Project="..\..\.paket\Paket.Restore.targets" />
