Migrate database to latest version during app startup

--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FoxyBalance.Database\FoxyBalance.Database.fsproj" />
+    <ProjectReference Include="..\FoxyBalance.Migrations\FoxyBalance.Migrations.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
