--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <Compile Include="Models.fs" />
     <Compile Include="Views\Shared.fs" />
-    <Compile Include="Views\Users.fs" />
+    <Compile Include="Views\AuthViews.fs" />
     <Compile Include="Views\Home.fs" />
     <Compile Include="Hashes.fs" />
     <Compile Include="RouteUtils.fs" />
@@ -30,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Include="Routes\Users.fs" />
+    <Compile Include="Routes\Auth.fs" />
     <Compile Include="Routes\Home.fs" />
     <Compile Include="Program.fs" />
     <None Include="web.config">
