--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <Compile Include="Models.fs" />
     <Compile Include="Views\Shared.fs" />
-    <Compile Include="Views\AuthViews.fs" />
+    <Compile Include="Views\Auth.fs" />
     <Compile Include="Views\Home.fs" />
     <Compile Include="Hashes.fs" />
     <Compile Include="RouteUtils.fs" />
