Add String utility module

--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -10,8 +10,9 @@
 
 
   <ItemGroup>
-    <Compile Include="Models.fs" />
+    <Compile Include="String.fs" />
     <Compile Include="Task.fs" />
+    <Compile Include="Models.fs" />
     <Compile Include="Views\Shared.fs" />
     <Compile Include="Views\Components\Form.fs" />
     <Compile Include="Views\Auth.fs" />
