Add module for standardizing formatting of dates/amounts

--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Compile Include="String.fs" />
+    <Compile Include="Format.fs" />
     <Compile Include="Task.fs" />
     <Compile Include="Models.fs" />
     <Compile Include="Views\Shared.fs" />
