--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -6,6 +6,7 @@
     <AssemblyName>foxy_balance</AssemblyName>
     <OutputType>Exe</OutputType>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
+    <VersionPrefix>1.1.0</VersionPrefix>
   </PropertyGroup>
 
 
