Add development sql connection string

--- a/src/FoxyBalance.Server/appsettings.development.json
+++ b/src/FoxyBalance.Server/appsettings.development.json
@@ -1,6 +1,6 @@
 ﻿{
   "HashingKey": "a-temporary-hashing-key-that-should-only-be-used-in-development",
   "ConnectionStrings": {
-    "SqlDatabase": "this will be replaced by the docker-compose.yml file" 
+    "SqlDatabase": "Server=localhost,7021;Database=master;User Id=sa;Password=a-BAD_passw0rd;TrustServerCertificate=true" 
   }
 }
