--- a/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
+++ b/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
@@ -4,9 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Utils.fs" />
     <Compile Include="Migrations\Migration_01.fs" />
     <Compile Include="Migrations\Migration_02.fs" />
     <Compile Include="Migrator.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Migrations\sql\*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
