Add models/migrations for tax years and income records

--- a/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
+++ b/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
@@ -7,6 +7,8 @@
     <Compile Include="Utils.fs" />
     <Compile Include="Migrations\Migration_01.fs" />
     <Compile Include="Migrations\Migration_02.fs" />
+    <Compile Include="Migrations\Migration_03.fs" />
+    <Compile Include="Migrations\Migration_04.fs" />
     <Compile Include="Migrator.fs" />
   </ItemGroup>
   <ItemGroup>
