--- a/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
+++ b/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="Migrations\Migration_03.fs" />
     <Compile Include="Migrations\Migration_04.fs" />
     <Compile Include="Migrations\Migration_05.fs" />
+    <Compile Include="Migrations\Migration_06.fs" />
     <Compile Include="Migrator.fs" />
   </ItemGroup>
   <ItemGroup>
