--- a/src/FoxyBalance.Database/FoxyBalance.Database.fsproj
+++ b/src/FoxyBalance.Database/FoxyBalance.Database.fsproj
@@ -8,8 +8,10 @@
     <Compile Include="Models.fs" />
     <Compile Include="Interfaces\IUserDatabase.fs" />
     <Compile Include="Interfaces\ITransactionDatabase.fs" />
+    <Compile Include="Interfaces\IIncomeDatabase.fs" />
     <Compile Include="Implementations\UserDatabase.fs" />
     <Compile Include="Implementations\TransactionDatabase.fs" />
+    <Compile Include="Implementations\IncomeDatabase.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
