--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FoxyBalance.Database\FoxyBalance.Database.fsproj" />
     <ProjectReference Include="..\FoxyBalance.Migrations\FoxyBalance.Migrations.fsproj" />
+    <ProjectReference Include="..\FoxyBalance.Sync\FoxyBalance.Sync.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
