Replace Shopify CSV upload/parser with Shopify Partner API sync

--- a/src/FoxyBalance.Sync/FoxyBalance.Sync.fsproj
+++ b/src/FoxyBalance.Sync/FoxyBalance.Sync.fsproj
@@ -9,7 +9,7 @@
     <Compile Include="Models.fs" />
     <Compile Include="Http.fs" />
     <Compile Include="GumroadClient.fs" />
-    <Compile Include="ShopifyPayoutParser.fs" />
+    <Compile Include="ShopifyPartnerClient.fs" />
     <Compile Include="PaypalTransactionParser.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
