--- a/src/FoxyBalance.Sync/FoxyBalance.Sync.fsproj
+++ b/src/FoxyBalance.Sync/FoxyBalance.Sync.fsproj
@@ -12,5 +12,11 @@
     <Compile Include="ShopifyPartnerClient.fs" />
     <Compile Include="PaypalTransactionParser.fs" />
   </ItemGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="fsharp.core" />
+    <PackageReference Include="fsharp.data" />
+    <PackageReference Include="shopifysharp" />
+    <PackageReference Include="jsonsharp" />
+    <PackageReference Include="system.text.json" />
+  </ItemGroup>
 </Project>
