--- a/src/FoxyBalance.Migrator/FoxyBalance.Migrator.fsproj
+++ b/src/FoxyBalance.Migrator/FoxyBalance.Migrator.fsproj
@@ -13,6 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CommandLineParser" />
-    <PackageReference Include="fsharp.core" />
+    <PackageReference Include="FSharp.Core" />
   </ItemGroup>
 </Project>
