--- a/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
+++ b/src/FoxyBalance.Server/FoxyBalance.Server.fsproj
@@ -5,6 +5,7 @@
     <DebugType>portable</DebugType>
     <AssemblyName>foxy_balance</AssemblyName>
     <OutputType>Exe</OutputType>
+    <InvariantGlobalization>false</InvariantGlobalization>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
     <VersionPrefix>1.1.0</VersionPrefix>
     <UserSecretsId>33ab6fc7-395b-4f96-b66d-8b31155cd925</UserSecretsId>
