--- a/src/FoxyBalance.Sync/FoxyBalance.Sync.fsproj
+++ b/src/FoxyBalance.Sync/FoxyBalance.Sync.fsproj
@@ -11,6 +11,7 @@
     <Compile Include="GumroadClient.fs" />
     <Compile Include="ShopifyPartnerClient.fs" />
     <Compile Include="PaypalTransactionParser.fs" />
+    <Compile Include="ServiceCollectionExtensions.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" />
