--- a/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
+++ b/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
@@ -22,6 +22,10 @@
   <ItemGroup>
     <PackageReference Include="Simple.Migrations" />
     <PackageReference Include="System.Data.SqlClient" />
+    <PackageReference Include="FluentMigrator" />
+    <PackageReference Include="FluentMigrator.Runner" />
+    <PackageReference Include="FluentMigrator.Runner.Postgres" />
+    <PackageReference Include="Npgsql" />
     <PackageReference Include="FSharp.Core" />
   </ItemGroup>
 </Project>
