Replace Simple.Migrations with FluentMigrator
type: chore
scope: dependencies

--- a/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
+++ b/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
@@ -5,14 +5,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Utils.fs" />
-    <Compile Include="Migrations\Migration_01.fs" />
+    <Compile Include="Migrator.fs" />
+    <!-- Old SQL Server migrations kept for reference -->
+    <!-- <Compile Include="Migrations\Migration_01.fs" />
     <Compile Include="Migrations\Migration_02.fs" />
     <Compile Include="Migrations\Migration_03.fs" />
     <Compile Include="Migrations\Migration_04.fs" />
     <Compile Include="Migrations\Migration_05.fs" />
     <Compile Include="Migrations\Migration_06.fs" />
-    <Compile Include="Migrations\Migration_07.fs" />
-    <Compile Include="Migrator.fs" />
+    <Compile Include="Migrations\Migration_07.fs" /> -->
   </ItemGroup>
   <ItemGroup>
     <Content Include="Migrations\sql\*">
@@ -20,8 +21,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Simple.Migrations" />
-    <PackageReference Include="System.Data.SqlClient" />
     <PackageReference Include="FluentMigrator" />
     <PackageReference Include="FluentMigrator.Runner" />
     <PackageReference Include="FluentMigrator.Runner.Postgres" />
