Migrate SQL Server tables, views, tvps and procs to PostgreSQL
No major reason behind this move away from SQL Server aside from a
desire to move off of SQL Server and over to a database that's truly
open source.

type: migration
scope: database

--- a/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
+++ b/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Utils.fs" />
+    <Compile Include="Migrations\Migration_001_InitialPostgreSQLSchema.fs" />
     <Compile Include="Migrator.fs" />
     <!-- Old SQL Server migrations kept for reference -->
     <!-- <Compile Include="Migrations\Migration_01.fs" />
