Update connection string for Postgres
type: refactor
scope: database, dev

--- a/src/FoxyBalance.Server/appsettings.development.json
+++ b/src/FoxyBalance.Server/appsettings.development.json
@@ -1,6 +1,6 @@
 ﻿{
   "HashingKey": "a-temporary-hashing-key-that-should-only-be-used-in-development",
   "ConnectionStrings": {
-    "SqlDatabase": "Server=localhost;Database=FoxyBalance;User Id=FoxyBalance_Server;Password=a-BAD_passw0rd;TrustServerCertificate=true"
+    "Database": "Host=localhost;Port=5432;Database=foxybalance;Username=foxybalance_app;Password=a-BAD_passw0rd"
   }
 }
