--- a/quadlet/app.yaml
+++ b/quadlet/app.yaml
@@ -41,7 +41,7 @@ spec:
       valueFrom:
         secretKeyRef:
           name: foxybalance_secrets
-          key: postgres_password
+          key: Postgres_Password
     - name: PGDATA
       value: /var/lib/postgresql/data/pgdata
     volumeMounts:
