--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,72 +1,121 @@
-name: CI Pipeline
+---
+name: CI/CD Pipeline
 
 on:
-  push:
-    branches: [ master ]
+  workflow_dispatch:
+    branches: [ master, main ]
 
 env:
+  REGISTRY: "ghcr.io"
+  SYSTEMD_SERVICE_NAME: "foxybalance.service"
   BUILD_IMAGE_NAME: "${{ secrets.ACR_REGISTRY }}/foxy-balance:${{ github.run_number }}"
   LATEST_IMAGE_NAME: "${{ secrets.ACR_REGISTRY }}/foxy-balance:latest"
 
 jobs:
   build:
-    name: "Build and push"
-    runs-on: ubuntu-20.04
-    environment: "Build Environment"
-
+    name: "Build containers"
+    runs-on: ubuntu-latest
+    # Set the permissions granted to the GITHUB_TOKEN for the actions in this job
+    permissions:
+      contents: read
+      packages: write
     steps:
-    - name: Log in to Azure Container Registry
-      env:
-        ACR_REGISTRY: ${{ secrets.ACR_REGISTRY }}
-        ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
-        ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
-      run: echo "$ACR_PASSWORD" | docker login --password-stdin --username "$ACR_USERNAME" "$ACR_REGISTRY"
-
     - name: Checkout branch
-      uses: actions/checkout@v3
+      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+
+    - name: Log in to GitHub Container Registry
+      run: |
+        echo "${{ secrets.GITHUB_TOKEN }}" | podman login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
 
     - name: Build container image
-      run: docker build -t "$BUILD_IMAGE_NAME" -t "$LATEST_IMAGE_NAME" .
+      id: build_image
+      run: |
+        podman build \
+          -t "$BUILD_IMAGE_NAME" \
+          -t "$LATEST_IMAGE_NAME" \
+          --build-arg "RUN=${{ github.run_number }}" \
+          --build-arg "COMMIT=${{ github.sha }}"
 
-    - name: Push container image
-      run: docker push "$BUILD_IMAGE_NAME" && docker push "$LATEST_IMAGE_NAME"
+    - name: Push container images to registry
+      run: |
+        podman push "$BUILD_IMAGE_NAME"
+        podman push "$LATEST_IMAGE_NAME"
+
+  update-pod-yaml:
+    name: "Update pod.yaml"
+    runs-on: ubuntu-latest
+    # Set the permissions granted to the GITHUB_TOKEN for the actions in this job
+    permissions:
+      contents: read
+      packages: write
+    steps:
+    - uses: deezapps-fam/install-pkl@53cb175aaee7fd70c5963b66c756fd750652bdae # v1.0.1
+      with:
+        version: '0.30.0'
+
+    - name: Checkout branch
+      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+
+    - name: Update pod.yaml
+      run: pkl eval
+
+    - name: Upload Kubernetes Config File
+      if: (!cancelled())
+      uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+      with:
+        name: pod.yaml
+        path: |
+          pod.yaml
 
   deploy:
-    name: "Deploy to Cryptum"
-    runs-on: ubuntu-20.04
-    environment: "Cryptum Deployment Environment"
-    # Do not run this job until the build job completes
-    needs: build
-
+    name: "Deploy to host"
+    runs-on: ubuntu-latest
+    environment: "Host Deployment Environment"
+    # Do not run this job until the other jobs complete
+    needs: [build, update-pod-yaml]
+    # Set the permissions granted to the GITHUB_TOKEN for the actions in this job
+    permissions:
+      contents: write
+      packages: read
     steps:
-    - name: Checkout branch
-      uses: actions/checkout@master
-
-    - name: Copy deployment script to Cryptum
-      uses: appleboy/scp-action@master
+    - name: Download pod.yaml artifact
+      uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
       with:
-        host: ${{ secrets.CRYPTUM_HOST }}
-        port: 22
-        username: ${{ secrets.CRYPTUM_USERNAME }}
-        key: ${{ secrets.CRYPTUM_PRIVATE_KEY }}
-        passphrase: ${{ secrets.CRYPTUM_SSH_PASSPHRASE }}
-        # Use a host fingerprint to ensure we always connect to the same server
-        #fingerprint: ${{ secrets.CRYPTUM_HOST_FINGERPRINT }}
-        source: ".github/scripts/deploy.fish"
-        target: "~/deployments"
-        # Strip the first two folder names from the deployed file (e.g. remove `.github/scripts`)
-        strip_components: 2
+        name: pod.yaml
+        path: .
+
+    - name: Copy updated k8s yaml file to host
+      uses: appleboy/scp-action@v1.0.0
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        port: ${{ secrets.SSH_PORT }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        fingerprint: ${{ secrets.SSH_HOST_FINGERPRINT }}
+        source: "pod.yaml"
+        target: "sites-enabled/foxy-balance/pod.yaml"
         overwrite: true
 
     - name: Execute deployment script via SSH
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.CRYPTUM_HOST }}
-        port: 22
-        username: ${{ secrets.CRYPTUM_USERNAME }}
-        key: ${{ secrets.CRYPTUM_PRIVATE_KEY }}
-        passphrase: ${{ secrets.CRYPTUM_SSH_PASSPHRASE }}
-        #fingerprint: ${{ secrets.CRYPTUM_HOST_FINGERPRINT }}
+        host: ${{ secrets.SSH_HOST }}
+        port: ${{ secrets.SSH_PORT }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        fingerprint: ${{ secrets.SSH_HOST_FINGERPRINT }}
         # Stop on errors
         script_stop: true
-        script: ./deployments/deploy.fish "${{ env.BUILD_IMAGE_NAME }}"
+        script: |
+          podman pull "${{ env.BUILD_IMAGE_NAME }}"
+          systemctl restart "${{ env.SYSTEMD_SERVICE_NAME }}"
+
+    - name: Create GitHub release
+      uses: ncipollo/release-action@440c8c1cb0ed28b9f43e4d1d670870f059653174 # v1.16.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        commit: ${{ steps.staging_build_info.outputs.commit_sha }}
+        name: Build ${{ github.run_number }}
+        tag: ${{ github.run_number }}
+        generateReleaseNotes: true
+        skipIfReleaseExists: true
