Fix scp target directory
The target name was accidentally leading to a nested folder, so the yaml
file ultimately ended up at "sites-enabled/foxy-balance/pod.yaml/pod.yaml".
This change should fix that nested folder and put the yaml file in the
intended directory.

type: fix
scope: deployment, ci

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -94,7 +94,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         fingerprint: ${{ secrets.SSH_HOST_FINGERPRINT }}
         source: ${{ env.YAML_FILE_NAME }}
-        target: "sites-enabled/foxy-balance/${{ env.YAML_FILE_NAME }}"
+        target: "sites-enabled/foxy-balance"
         overwrite: true
 
     - name: Execute deployment script via SSH
