Use `--user` flag when restarting quadlet service
The quadlet runs as part of the user's systemd services, so the `--user`
flag needs to be passed. Without it, systemctl will look for a root
service with the given name to restart, which doesn't exist.

type: fix
scope: deployment, ci

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -109,7 +109,7 @@ jobs:
         script_stop: true
         script: |
           podman pull "${{ env.BUILD_IMAGE_NAME }}"
-          systemctl restart "${{ env.SYSTEMD_SERVICE_NAME }}"
+          systemctl --user restart "${{ env.SYSTEMD_SERVICE_NAME }}"
 
     - name: Create GitHub release
       uses: ncipollo/release-action@440c8c1cb0ed28b9f43e4d1d670870f059653174 # v1.16.0
