--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
 env:
   REGISTRY: "ghcr.io"
   YAML_FILE_NAME: "pod.yaml"
-  SYSTEMD_SERVICE_NAME: "foxybalance.service"
+  SYSTEMD_SERVICE_NAME: "foxy-balance.service"
   BUILD_IMAGE_NAME: "ghcr.io/nozzlegear/foxy-balance:${{ github.run_number }}"
   LATEST_IMAGE_NAME: "ghcr.io/nozzlegear/foxy-balance:latest"
 
