--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      digest: ${{ steps.push_image.outputs.digest }}
     steps:
     - name: Checkout branch
       uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
@@ -39,13 +41,18 @@ jobs:
           .
 
     - name: Push container images to registry
+      id: push_image
       run: |
         podman push "$BUILD_IMAGE_NAME"
         podman push "$LATEST_IMAGE_NAME"
+        # Get the digest of the build image
+        DIGEST=$(podman inspect "$BUILD_IMAGE_NAME" --format='{{.Digest}}')
+        echo "digest=$DIGEST" >> $GITHUB_OUTPUT
 
   update-pod-yaml:
     name: "Update k8s config file"
     runs-on: ubuntu-latest
+    needs: [build]
     # Set the permissions granted to the GITHUB_TOKEN for the actions in this job
     permissions:
       contents: read
@@ -59,7 +66,7 @@ jobs:
       uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
 
     - name: Generate k8s yaml file
-      run: pkl eval quadlet/pod.pkl -p "appImageName=$BUILD_IMAGE_NAME" -o ${{ env.YAML_FILE_NAME }}
+      run: pkl eval quadlet/pod.pkl -p "appImageName=$BUILD_IMAGE_NAME@${{ needs.build.outputs.digest }}" -o ${{ env.YAML_FILE_NAME }}
 
     - name: Upload Kubernetes config file
       if: (!cancelled())
