--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -23,7 +23,10 @@
     <PackageVersion Include="System.Data.SqlClient" Version="4.9.0" />
     <PackageVersion Include="System.Text.Json" Version="9.0.3" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
-    <PackageVersion Include="xunit" Version="2.9.3" />
-    <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
+    <PackageVersion Include="xunit.v3" Version="3.1.0" />
+    <PackageVersion Include="xunit.v3.assert" Version="3.1.0" />
+    <PackageVersion Include="xUnit.Combinatorial" Version="2.0.24" />
+    <PackageVersion Include="xUnit.Runner.VisualStudio" Version="3.1.5" />
+    <PackageVersion Include="xunit.v3.extensibility.core" Version="3.1.0" />
   </ItemGroup>
 </Project>
