Add ImportId column to track transactions imported via spreadsheet
The ImportId column is a identifier assigned by a transaction parser
which should idempotently identify each transaction. This identifier
will help the app achieve transaction idempotency, preventing the import
of the same transactions if they appear in multiple spreadsheets (or the
same spreadsheet is uploaded multiple times).

type: feature
scope: database, transactions

--- a/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
+++ b/src/FoxyBalance.Migrations/FoxyBalance.Migrations.fsproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <Compile Include="Utils.fs" />
     <Compile Include="Migrations\Migration_001_InitialPostgreSQLSchema.fs" />
+    <Compile Include="Migrations\Migration_002_AddImportIdToTransactions.fs" />
     <Compile Include="Migrator.fs" />
   </ItemGroup>
   <ItemGroup>
