Add TransactionDatabase.BulkCreateAsync function
This function uses Postgres's COPY command to bulk copy data to the
database rather than building up a huge array of parameters.

type: feature
scope: database, transactions

--- a/tests/FoxyBalance.Database.Tests/FoxyBalance.Database.Tests.fsproj
+++ b/tests/FoxyBalance.Database.Tests/FoxyBalance.Database.Tests.fsproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\FoxyBalance.Database\FoxyBalance.Database.fsproj" />
     <ProjectReference Include="..\..\src\FoxyBalance.Migrator\FoxyBalance.Migrator.fsproj" />
+    <ProjectReference Include="..\FoxyBalance.Tests.Utils\FoxyBalance.Tests.Utils.fsproj" />
   </ItemGroup>
 
 </Project>
